openmediavault-vdr (0.5.4) stable; urgency=low

  * Added Channel Tab to change channel order and delete channels (Closes: #3)

openmediavault-vdr (0.5.3) stable; urgency=low

  * Reduce event firing

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Fri, 06 Dec 2013 20:03:08 -0500

openmediavault-vdr (0.5.2) stable; urgency=low

  * Fix rpc file to make scanning work
  * Fix module file so that Services Overview works
  * Fix mkconf script so parameters are read from the correct location and check if /var/lib/vdr/setup.conf exists
  * Fix postinst script so that vdr is not left running after installation

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sat, 07 Dec 2013 00:13:00 +0200

openmediavault-vdr (0.5.1) stable; urgency=low

  * Fix .deb files

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Fri, 06 Dec 2013 11:48:08 -0500

openmediavault-vdr (0.5) stable; urgency=low

  * Initial release

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 04 Dec 2013 21:36:08 +0200